init golang project about tenders